services/nodeport/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deploy
  namespace: practice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: webserver

  template: 
    metadata: 
      name: deploymentpod
      labels:
        name: webserver
    spec:
      containers:
        - name: c1
          image: nginx:latest
          ports:
          - containerPort: 80
      # nodeSelector:
      #   region: ap-south-1a
