services/nodeport/deployment2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  selector:
    matchLabels:
      run: load-balancer-example
  replicas: 2
  template:
    metadata:
      labels:
        run: load-balancer-example
    spec:
      containers:
        - name: hello-world
          image: sunilkumawat/dinosaur:v1
          ports:
            - containerPort: 3000
              protocol: TCP
