services/nodeport/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: deploymentservice
spec: 
  ports:
    - port: 80        # container port exposed
      targetPort: 80  # Pod port
  selector:
    name: deployment  # apply this service to any pods which has the specific label
  type: NodePort     # specifies the service type i.e, Cluster IP or NodePort
