services/nodeport/service2.yml
apiVersion: v1
kind: Service
metadata: 
  name: deploymentservice
spec: 
  ports:
    - port: 3000        # container port exposed
      targetPort: 3000  # Pod port
  selector:
    run: load-balancer-example  # apply this service to any pods which has the specific label
  type: NodePort     # specifies the service type i.e, Cluster IP or NodePort
