services/nodeport/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: practice
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /web
        pathType: Prefix
        backend:
          service:
            name: deploy-svc
            port:
              number: 80
